[gd_scene load_steps=13 format=2]

[ext_resource path="res://themes/theme_u_main.tres" type="Theme" id=1]
[ext_resource path="res://hud/hud.gd" type="Script" id=2]
[ext_resource path="res://hud/menu_layer.gd" type="Script" id=3]
[ext_resource path="res://hud/scores/scores.tscn" type="PackedScene" id=4]
[ext_resource path="res://hud/hud_menu.tscn" type="PackedScene" id=5]
[ext_resource path="res://themes/menu_header/styleboxflat_panel.tres" type="StyleBox" id=6]
[ext_resource path="res://hud/system/details.tscn" type="PackedScene" id=7]
[ext_resource path="res://gui/menu/menu_header.tscn" type="PackedScene" id=8]
[ext_resource path="res://gui/menu/menu_body.gd" type="Script" id=10]
[ext_resource path="res://gui/menu/menu_container.gd" type="Script" id=11]
[ext_resource path="res://hud/chat/chatbox.tscn" type="PackedScene" id=12]

[sub_resource type="StreamTexture" id=1]
flags = 4
load_path = "res://.import/victory.svg-1cf9d5447f7a6d6e554d9626c55de119.stex"

[node name="HUD" type="Control" groups=[
"theme_faction_container",
]]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SystemDetails" parent="." instance=ExtResource( 7 )]
anchor_left = 0.02
anchor_top = 0.3
anchor_right = 0.98
anchor_bottom = 0.98
grow_horizontal = 0
grow_vertical = 0
mouse_filter = 2

[node name="HudMenu" parent="." instance=ExtResource( 5 )]
anchor_top = 0.02
anchor_bottom = 0.07

[node name="ScoresContainer" type="VBoxContainer" parent="."]
anchor_left = 0.02
anchor_top = 0.05
anchor_right = 0.12
anchor_bottom = 0.2
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuContainer" type="VBoxContainer" parent="ScoresContainer"]
margin_right = 230.0
margin_bottom = 162.0
size_flags_vertical = 3
custom_constants/separation = 0
script = ExtResource( 11 )

[node name="MenuHeader" parent="ScoresContainer/MenuContainer" instance=ExtResource( 8 )]
margin_right = 230.0
margin_bottom = 31.0
custom_styles/panel = ExtResource( 6 )
text = "hud.scores"
closable = false
texture = SubResource( 1 )

[node name="MenuBody" type="PanelContainer" parent="ScoresContainer/MenuContainer"]
show_behind_parent = true
margin_top = 31.0
margin_right = 230.0
margin_bottom = 162.0
size_flags_vertical = 3
script = ExtResource( 10 )

[node name="Body" type="VBoxContainer" parent="ScoresContainer/MenuContainer/MenuBody"]
margin_left = 3.0
margin_top = 2.0
margin_right = 227.0
margin_bottom = 129.0
size_flags_vertical = 3

[node name="Scores" parent="ScoresContainer/MenuContainer/MenuBody/Body" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_right = 224.0
margin_bottom = 127.0

[node name="MenuLayer" type="Control" parent="."]
anchor_top = 0.12
anchor_right = 1.0
anchor_bottom = 0.78
grow_horizontal = 0
mouse_filter = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChatContainer" type="VBoxContainer" parent="."]
margin_left = 40.0
margin_top = 750.0
margin_right = 440.0
margin_bottom = 950.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuContainer" type="VBoxContainer" parent="ChatContainer"]
margin_right = 400.0
margin_bottom = 200.0
size_flags_vertical = 3
custom_constants/separation = 0
script = ExtResource( 11 )

[node name="MenuHeader" parent="ChatContainer/MenuContainer" instance=ExtResource( 8 )]
margin_right = 400.0
margin_bottom = 31.0
custom_styles/panel = ExtResource( 6 )
text = "hud.chatbox"
closable = false

[node name="MenuBody" type="PanelContainer" parent="ChatContainer/MenuContainer"]
show_behind_parent = true
margin_top = 31.0
margin_right = 400.0
margin_bottom = 200.0
size_flags_vertical = 3
script = ExtResource( 10 )

[node name="Body" type="VBoxContainer" parent="ChatContainer/MenuContainer/MenuBody"]
margin_left = 3.0
margin_top = 2.0
margin_right = 397.0
margin_bottom = 167.0
size_flags_vertical = 3

[node name="Chatbox" parent="ChatContainer/MenuContainer/MenuBody/Body" instance=ExtResource( 12 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 394.0
margin_bottom = 165.0
size_flags_vertical = 3
